# pangolin

./: .gitignore  README.md
crime_news_scrapper/: .pre-commit-config.yaml  config.py  config.yaml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
crime_news_scrapper/news_scrapper/: config.py  pyproject.toml
crime_news_scrapper/news_scrapper/news_scrapper/: const.py  items.py  log.py  pipelines.py  settings.py
crime_news_scrapper/news_scrapper/news_scrapper/database/: database.py  postgresql.py
crime_news_scrapper/news_scrapper/news_scrapper/parsers/: india_today_parser.py  indian_express_parser.py  news_website_parser.py
crime_news_scrapper/news_scrapper/news_scrapper/spiders/: crime_news_crawler.py
